# pytomlcleaner

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml
src/pytomlcleaner/: cleaner.py  cli.py
test/: test_generate_feature.py  test_placeholder.py
